react_컴포넌트, props

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <!-- main.jsx와 연결 -->
     <div id="root"></div>
     <!-- main.jsx와 html을 묶어줌 -->
     <script type="module" src="/src/main.jsx"></script>
